force-app/main/default/objects/FieloPLT__ProgramPointType__c/FieloPLT__ProgramPointType__c.object-meta.xml
<CustomObject>
    <description>It relates a Program with a specific Point Type, that is, in which Program each Point Type is used.</description>
    <label>Program Point Type</label>
    <nameField>
        <displayFormat>PPT-{0000}</displayFormat>
        <label>Program Point Type Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Point Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>