force-app/main/default/objects/FieloPLT__ProgramPointType__c/fields/FieloPLT__AuditPoints__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__AuditPoints__c</fullName>
    <defaultValue>false</defaultValue>
    <description>It specifies where the &quot;Program Point Type&quot; used in a Redemption come from.</description>
    <inlineHelpText>When ticked, it specifies where &quot;Program Point Type&quot; used in a Redemption come from.</inlineHelpText>
    <label>Audit Points</label>
    <type>Checkbox</type>
</CustomField>