force-app/main/default/objects/FieloPLT__ProgramPointType__c/fields/FieloPLT__ExpirationMode__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__ExpirationMode__c</fullName>
    <description>Point Type expiration mode: Total or Partial.</description>
    <inlineHelpText>Choose Point Type expiration mode: Total or Partial Mode.</inlineHelpText>
    <label>Expiration Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Total</fullName>
            </value>
            <value>
                <fullName>Partial</fullName>
                <default>true</default>
                <label>Partial</label>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>