force-app/main/default/objects/FieloPLT__ProgramPointType__c/fields/FieloPLT__PointType__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__PointType__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Specific Point Type for this Program.</description>
    <inlineHelpText>Choose the specific Point Type for this Program.</inlineHelpText>
    <label>Point Type</label>
    <referenceTo>FieloPLT__PointType__c</referenceTo>
    <relationshipLabel>Program Point Types</relationshipLabel>
    <relationshipName>ProgramPointTypes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>