force-app/main/default/objects/FieloPLT__ProgramPointType__c/fields/FieloPLT__Program__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Program__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Program where the &quot;Point Type&quot; belongs to.</description>
    <inlineHelpText>Choose the Program where the Point Type belongs to.</inlineHelpText>
    <label>Program</label>
    <referenceTo>FieloPLT__Program__c</referenceTo>
    <relationshipLabel>Program Point Types</relationshipLabel>
    <relationshipName>ProgramPointTypes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>