force-app/main/default/objects/FieloPLT__ProgramPointType__c/fields/FieloPLT__RequestPointApproval__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__RequestPointApproval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When ticked, each Point Type needs to be approved before being granted to Members.</description>
    <inlineHelpText>Tick this if you each Point Type to be approved before being granted to Members.</inlineHelpText>
    <label>Request Point Approval</label>
    <type>Checkbox</type>
</CustomField>