force-app/main/default/objects/FieloPLT__ProgramPointType__c/fields/FieloPLT__UniqueKey__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__UniqueKey__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Unique, automatically generated Program ID and Point Type ID field. It prevents relating several times a Program to the same Point Type.</description>
    <inlineHelpText>Unique, automatically generated Program ID and Point Type ID field.</inlineHelpText>
    <label>Unique Key</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>